tests/cases/smoke/invalid/error_throwing_call_without_handling.dp
record FileError {
    path: str
    reason: str
}

func read_file(path: str) -> str throws FileError {
    raise FileError {
        path: path
        reason: "boom"
    }
}

func run() -> str {
    return read_file("notes.txt")
}
